--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.3.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.28.0",
+    "convex-helpers": "^0.1.104",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
